# energiminer

./: compile.bat
libnrghash-cuda/: CMakeLists.txt
